# YAO

./: LICENSE  README.md
docs/: dh_param.docx
docs/notes/: 7.3.2.nb  dhmodel.nb  j.m  mathematica.nb  robot_math.nb  robot_math_direct_kinematic.nb  robot_math_inverse_kinematic.nb
docs/notes/ElegantBook-3.11/: elegantbook-cn-0.01.tex  (+4 more)
docs/reference/: ABBRobotIRB14000电路原理图说明书.xdf
hardware/electrics/: AR连线图.xlsx  AS连线图.xlsx  connector.xlsx
mechanism/manufacture/: B308-A.SLDPRT  B710-A.SLDPRT  base_b.SLDASM  base_b基座.SLDPRT  base_b轴1外壳.SLDPRT  l1r.SLDASM  l1r主壳.sldprt  l1r主轴.sldprt  l1r主轴垫片.sldprt  l1r电机安装垫片.SLDPRT  l1r线缆支架.sldprt  l1r线缆支架a.SLDPRT  l1r线缆支架b.sldprt  l1r轴2侧大盖.sldprt  l1r轴2侧小盖.sldprt  l2r.SLDASM  l2r主轴b.sldprt  l2r主轴c.sldprt  l2r线缆支架a.sldprt  l2r线缆支架b.sldprt  l2r轴2侧壳.sldprt  l2r轴2侧大盖.sldprt  l2r轴2侧小盖.sldprt  l2r轴7右内壳.sldprt  l2r轴7右外壳.sldprt  l2r轴7左内壳.sldprt  l2r轴7左外壳.sldprt  l3r.SLDASM  l3r主轴.sldprt  l3r轴3侧大盖.sldprt  l3r轴3内壳b.sldprt  l3r轴3外壳a.sldprt  l3r轴3外壳b.sldprt  l4r-l6r编码器支架6x5.SLDPRT  l4r-l6r编码器支架6x6.SLDPRT  l4r.SLDASM  l4r主轴.sldprt  l4r主轴b.sldprt  l4r主轴右大盖.sldprt  l4r线缆支架a.sldprt  (+28 more)
software/: README.md
software/src/: CMakeLists.txt
software/src/enabot_control/: CMakeLists.txt  package.xml
software/src/enabot_control/include/enabot_control/: enabot_comm.h  enabot_control.h  galil_dmc_4060.h
software/src/enabot_control/include/galil/: gclib.h  gclib_errors.h  gclib_record.h  gclibo.h
software/src/enabot_control/launch/: enabot_control.launch
software/src/enabot_control/src/: contour.dmc  enabot_comm.cpp  enabot_control.cpp  galil_dmc_4060.cpp  postrack.dmc
software/src/enabot_description/: CMakeLists.txt  package.xml
software/src/enabot_description/gazebo/: gazebo.urdf.xacro
software/src/enabot_description/launch/: enabot.rviz  enabot_description.launch  enabot_rviz.launch
software/src/enabot_description/meshes/: l1r.stl  l3r.stl  l5r.stl  l6r.stl  l7r.stl
software/src/enabot_description/meshes/coarse/: base.stl  l1rc.stl  l2rc.stl  l3rc.stl  l4rc.stl  l5rc.stl  l6rc.stl  l7rc.stl
software/src/enabot_description/urdf/: enabot.gazebo.xacro  enabot.transmission.xacro  enabot.urdf.xacro  enabot.urdf2.xacro  enabot.xacro  enabot_nogrippers.urdf.xacro  enabot_pos.urdf.xacro  enabot_servo_gripper.gazebo.xacro  enabot_servo_gripper.transmission.xacro  enabot_servo_gripper.xacro
(+106 files in other folders)
