<?xml version="1.0"?>
<package format="2">
  <name>enabot_description</name>
  <version>0.0.1</version>
  <description>The enabot_description package</description>

  <maintainer email="robert.krug@oru.se">Robert Krug</maintainer>

  <license>BSD</license>

  <author email="robert.krug@oru.se">Robert Krug</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
</package>
